# vgi-scikit-learn

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SUPPORT.md  conftest.py  docker-entrypoint.sh  fly.toml  pyproject.toml  serve.py  sklearn_worker.py
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
ci/: README.md  check-version.sh  run-integration.sh
test/sql/: sklearn_blob_models.test  sklearn_datasets.test  sklearn_feature_selection.test  sklearn_generators.test  sklearn_grid_search.test  sklearn_grouped.test  sklearn_metrics.test  sklearn_models.test  sklearn_pipeline.test  sklearn_polish.test  sklearn_splitters.test  sklearn_stored_transforms.test  sklearn_text.test  sklearn_transforms.test  sklearn_typed_fit.test  sklearn_validation.test
tests/: harness.py  test_datasets.py  test_docstrings.py  test_estimators.py  test_feature_selection.py  test_features.py  test_grouped.py  test_metrics.py  test_models.py  test_pipeline.py  test_search.py  test_splitters.py  test_stored_transforms.py  test_table_metrics.py  test_text.py  test_transforms.py  test_worker_version.py
vgi_sklearn/: __init__.py  buffering.py  datasets.py  feature_selection.py  features.py  grouped.py  metrics.py  models.py  pipeline.py  registry.py  schema_utils.py  search.py  splitters.py  stored_transforms.py  table_metrics.py  text.py  transforms.py  typed_models.py  worker.py
