[project]
name = "vgi-sklearn"
version = "0.1.0"
description = "A VGI (Vector Gateway Interface) worker exposing scikit-learn datasets, metrics, transforms, and a train/predict model registry to DuckDB/SQL"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rusty Conover", email = "rusty@query.farm" }]
maintainers = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
keywords = ["vgi", "duckdb", "arrow", "scikit-learn", "machine-learning", "sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python[http]>=0.8.1",
    "scikit-learn>=1.5",
    "numpy",
    "skops>=0.11",
]

# Console scripts. `vgi-sklearn` runs the stdio transport (DuckDB spawns it);
# `vgi-sklearn-http` runs the HTTP server. Once installed you can launch either
# directly, e.g. `uvx vgi-sklearn`.
[project.scripts]
vgi-sklearn = "vgi_sklearn.worker:main"
vgi-sklearn-http = "vgi_sklearn.worker:main_http"

[project.urls]
Homepage = "https://query.farm"
Repository = "https://github.com/Query-farm/vgi-scikit-learn"
Issues = "https://github.com/Query-farm/vgi-scikit-learn/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The installable worker is the `vgi_sklearn` package (entry points live in
# vgi_sklearn.worker). The repo-root sklearn_worker.py / serve.py are dev/Fly
# shims and intentionally not shipped in the wheel.
[tool.hatch.build.targets.wheel]
packages = ["vgi_sklearn"]

[tool.hatch.build.targets.sdist]
include = [
    "vgi_sklearn/",
    "sklearn_worker.py",
    "serve.py",
    "conftest.py",
    "tests/",
    "test/",
    "ci/",
    "assets/",
    "README.md",
    "CLAUDE.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest",
    "pyarrow",
    "ruff",
    "pydoclint",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E741",  # ambiguous variable name (x, y are conventional in ML)
    "B008",  # function call in argument default (Arg(...) defaults are intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pydoclint]
# Docstring consistency gate (complements ruff's `D` rules, which only check
# docstring *shape*, not whether documented args/attributes match the code).
# Mirrors the vgi-python settings. Run via `uv run pydoclint vgi_sklearn/
# sklearn_worker.py serve.py`; also enforced inside the pytest suite by
# tests/test_docstrings.py.
style = "google"
# Types live in signatures, not docstrings (Google style).
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
# Validate that an `Attributes:` section matches the actual dataclass fields.
check_class_attributes = true
# Raises are documented indirectly; don't gate on DOC5xx.
skip_checking_raises = true
# Document constructor params in the class docstring, not __init__.
allow_init_docstring = true
