[project]
name = "vgi-sklearn"
# Single-sourced from vgi_sklearn/__init__.py (see [tool.hatch.version]) so the
# published wheel, the version the worker advertises over VGI
# (implementation_version / data_version), and the GitHub Release tag are always
# the same number. Bump __version__ there before tagging a release.
dynamic = ["version"]
description = "A VGI (Vector Gateway Interface) worker exposing scikit-learn datasets, metrics, transforms, and a train/predict model registry to DuckDB/SQL"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rusty Conover", email = "rusty@query.farm" }]
maintainers = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
keywords = ["vgi", "duckdb", "arrow", "scikit-learn", "machine-learning", "sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python[http]>=0.8.3",
    "scikit-learn>=1.5",
    "numpy",
    "skops>=0.11",
]

[project.optional-dependencies]
# HTTP-serving extras. Sentry telemetry and OAuth auth only apply to the HTTP
# server (under stdio, DuckDB owns the pipe), so they live here rather than in
# the base deps: the published Docker image installs `.[serve]`, while a plain
# `pip install vgi-sklearn` for an on-host stdio worker stays lean.
serve = [
    "vgi-python[http,oauth]>=0.8.3",
    "vgi-rpc[sentry]",
    "authlib",
]

# Console scripts. `vgi-sklearn` runs the stdio transport (DuckDB spawns it);
# `vgi-sklearn-http` runs the HTTP server. Once installed you can launch either
# directly, e.g. `uvx vgi-sklearn`.
[project.scripts]
vgi-sklearn = "vgi_sklearn.worker:main"
vgi-sklearn-http = "vgi_sklearn.worker:main_http"

[project.urls]
Homepage = "https://query.farm"
Repository = "https://github.com/Query-farm/vgi-scikit-learn"
Issues = "https://github.com/Query-farm/vgi-scikit-learn/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Read the package version from the `__version__` literal in the package itself,
# so it is the single source of truth (see [project].dynamic above).
[tool.hatch.version]
path = "vgi_sklearn/__init__.py"

# The installable worker is the `vgi_sklearn` package (entry points live in
# vgi_sklearn.worker). The repo-root sklearn_worker.py / serve.py are dev/Fly
# shims and intentionally not shipped in the wheel.
[tool.hatch.build.targets.wheel]
packages = ["vgi_sklearn"]

[tool.hatch.build.targets.sdist]
include = [
    "vgi_sklearn/",
    "sklearn_worker.py",
    "serve.py",
    "conftest.py",
    "tests/",
    "test/",
    "ci/",
    "assets/",
    "README.md",
    "CLAUDE.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest",
    "pyarrow",
    "ruff",
    "pydoclint",
    "mypy",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "D"]
ignore = [
    "E741",  # ambiguous variable name (x, y are conventional in ML)
    "B008",  # function call in argument default (Arg(...) defaults are intentional)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests are not part of the documented public surface: skip docstring rules.
"tests/*" = ["E402", "D"]

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
# Docstring consistency gate (complements ruff's `D` rules, which only check
# docstring *shape*, not whether documented args/attributes match the code).
# Mirrors the vgi-python settings. Run via `uv run pydoclint vgi_sklearn/
# sklearn_worker.py serve.py`; also enforced inside the pytest suite by
# tests/test_docstrings.py.
style = "google"
# Types live in signatures, not docstrings (Google style).
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
# Validate that an `Attributes:` section matches the actual dataclass fields.
check_class_attributes = true
# Raises are documented indirectly; don't gate on DOC5xx.
skip_checking_raises = true
# Document constructor params in the class docstring, not __init__.
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# The scientific stack ships no (or partial) type information; don't fail on
# missing stubs for these third-party imports.
module = ["sklearn.*", "scipy.*", "skops.*", "joblib.*", "pandas.*"]
ignore_missing_imports = true

[tool.vgi-lint-check.severity]
# Per-function `vgi.example_queries` are illustrative documentation — they
# reference hypothetical tables (a `predictions` table) or a pre-fit model, so
# they cannot execute standalone. The curated catalog `vgi.executable_examples`
# are the guaranteed-runnable, must-pass set (VGI906, error). Keep the
# illustrative-example execution rules advisory rather than gating.
VGI901 = "info"
VGI902 = "info"
